# stm32_learn

./: .mxproject  CMakeLists.txt  FreeRTOS_Learn.ioc  mymain.c  stm32_learn.ioc
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: main.c  main_origin.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
FreeRTOS/FreeRTOS-Kernel/: CmakeLists.txt  FreeRTOSConfig.h
Hardware/: CmakeLists.txt
Hardware/Inc/: delay.h  gt911.h  lcd.h  lcd_driver.h  led.h  stm32_target_hal.h  sys.h
Hardware/Src/: delay.c  gt911.c  lcd.c  lcd_driver_16bits_fsmc.c  lcd_driver_gpio.c  lcd_driver_spi1.c  led.c  sys.c
LVGL/: CMakeLists.txt  lv_conf.h
LVGL/examples/porting/: lv_port_disp.c  lv_port_indev.c
Users/: myinterrupt.c  mymain.c
cmake/stm32cubemx/: CMakeLists.txt
cmake/user/: CmakeLists.txt
